# sky_guard

./: .gitignore  LICENSE  METHODOLOGY.md  README.md  SCALABILITY.md  TECHNICAL_GUIDE.md  pyproject.toml
.streamlit/: config.toml
config/: logging_config.py
data/processed/: ai_recommendations.json  enriched_inventory_with_risks.csv  risk_analysis.json  roi_analysis.json
src/ai_reasoning/: ai_reasoning_engine.py
src/analytics/: detect_anomalies.py  roi_calculator.py
src/dashboard/: dashboard_app.py
src/dashboard/components/: sidebar.py
src/dashboard/config/: theme.py
src/dashboard/utils/: animations.py  data_loader.py
src/dashboard/views/: ai_recommendations.py  financial_performance.py  risk_analysis.py  settings.py
src/data_generation/: generate_data.py  validate_data.py
src/pipeline/: run_pipeline.py
