[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sky-guard"
version = "1.0.0"
description = "AI-Driven Operational Resilience for Aviation MRO"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
