[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sky-guard"
version = "1.0.0"
description = "AI-Driven Operational Resilience for Aviation MRO"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.0",
    "plotly>=6.5.2",
    "streamlit-option-menu>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*", "pipeline*"]